tests/security/print/output.txt
ERROR: TaintedData - input.hack:1:7 - Data from a URL query string found its way to an HTML tag using path $_GET --array-fetch--> arrayvalue-fetch (input.hack:1:7) ----> echo#1 (input.hack:1:7)